package com.directi.training.dip.exercise;

import java.io.IOException;

public interface IReader {
    
    String read() throws IOException;

}
